# llama.rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md  config.yaml  install.ps1  install.sh
src/: errors.rs  lib.rs
src/cli/: args.rs  commands.rs
src/diagnostics/: mod.rs
src/docker/: client.rs  mod.rs
src/hardware/: mod.rs
src/models/: mod.rs  presets.rs  profile.rs  scanner.rs
src/tuning/: candidates.rs  gguf.rs  mod.rs  search.rs
src/utils/: logger.rs  mod.rs
tests/e2e/: cli.rs
tests/integration/: docker.rs  mod.rs  model_scanner.rs  profile_manager.rs
tests/unit/: diagnostics.rs  errors.rs  hardware.rs  logger.rs  mod.rs  profile_integration.rs  public_api.rs  scanner.rs  tuning.rs
